Fix Sign Up page layout issue

--- a/src/styles/SignUp.scss
+++ b/src/styles/SignUp.scss
@@ -3,5 +3,7 @@
 .SignUpContainer {
   text-align: center;
   margin: 0 auto;
+  width: 100%;
+  padding-bottom: 4rem;
 }
 
